--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<head>
 	<title>User Journeys - lightweight user journey mapping</title>
 
-	<link rel="stylesheet" type="text/css"></link>
+	<link rel="stylesheet" type="text/css" href="css/app.css"/>
 
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -22,8 +22,52 @@
 	
 
 	<body>
-	<h1>Hello World</h1>
-	<p>I'm hosted with GitHub Pages.</p>
-	<a href="#">Emotion</a> | <a href="#">Complexity</a>
+
+	<header>
+
+  	<div class="Grid Grid--gutters" style="padding-top: 20px;">
+		<div class="Grid-cell u-textLeft">
+		</div>
+		  
+		<div class="Grid-cell u-textCenter">
+			<a href="index.html" target="_blank" class="logo" title="Experience mapper by &#9679;&#9698; TOUCHDELUXE">
+			<img src="assets/site-icon-dark-s.png" height="64px" width="64px"/>
+		</a>
+		</div>
+
+		<div class="Grid-cell u-textRight">
+		</div>
+	</div>
+
+
+  	</header>
+
+  	<section>
+	  	<h1>Hello World</h1>
+		<p>I'm hosted with GitHub Pages.</p>
+		<a href="#">Emotion</a> | <a href="#">Complexity</a>
+	</section>
+
+	<footer>
+
+		<div class="Grid Grid--gutters u-textLeft" style="font-size: .50em;">
+
+			<div class="Grid-cell">
+	 			<div style=" padding-left: 5px;">
+	 				User Journeys App | &copy; 2015 All rights reserved 
+	 			</div>
+			</div>		 						
+
+			<div class="Grid-cell u-textRight">
+	 			<div style="padding-right: 5px;">
+	 				<a href="#">About</a> | <a href="#">Contact</a> | <a href="#">User experience</a>
+	 			</div>
+ 			</div>
+
+			</div>
+
+		</footer>
+
 	</body>
+	
 </html>
