--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<head>
 	<title>User Journeys - lightweight user journey mapping</title>
 
-	<link rel="stylesheet" type="text/css" href="css/app.css"/>
+	<link rel="stylesheet" type="text/css" href="app.css"/>
 
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
