class to section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   	</header>
 
-  	<section>
+  	<section class="Site-content">
 	  	<h1>Hello World</h1>
 		<p>I'm hosted with GitHub Pages.</p>
 		<a href="#">Emotion</a> | <a href="#">Complexity</a>
