--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		  
 		<div class="Grid-cell u-textCenter">
 			<a href="index.html" target="_blank" class="logo" title="Experience mapper by &#9679;&#9698; TOUCHDELUXE">
-			<img src="assets/site-icon-dark-s.png" height="64px" width="64px"/>
+			<img src="site-icon.png" height="64px" width="64px"/>
 		</a>
 		</div>
 
