change green wording

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   	<section class="Site-content">
 	  	
 	  	<div class="signup-message">
-	  		<p style="text-align: center"><strong>Thanks for signing up</strong>; we're expecting to release User Journeys soon. in the meantime, download one of our template maps.</p>
+	  		<p style="text-align: center"><strong>Thanks!</strong>; we're expecting to release the online version User Journeys soon. in the meantime, download one of our template maps or <a href="twitter.com/user_journeys" target="_blank">follow us on Twitter</a>.</p>
 	  	</div>
 
 		<div class="Grid Grid--gutters ">
