--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   				
 		  				<div class="Grid Grid--gutters Grid--full large-Grid--fit u-textCenter">
 			  				<div class="Grid-cell pdf-box">				  					
-			  					<a href="01_EmotionalAnalysis_Template-Guide.pdf" name="EmotionImage" onclick="dataLayer.push({'event': 'emotion-click'});"><img class="select-type" src="emotion-map-image.png"></a>
-			  					<p>Map a User Journey by<br/> <a href="01_EmotionalAnalysis_Template-Guide.pdf" name="EmotionLink" onclick="dataLayer.push({'event': 'emotion-click'});">Emotion</a></p>
+			  					<a href="01_EmotionalAnalysis_Template-Guide.pdf"><img class="select-type" src="emotion-map-image.png"></a>
+			  					<p>Map a User Journey by<br/> <a href="01_EmotionalAnalysis_Template-Guide.pdf">Emotion</a></p>
 			  					<p class="guide">Select this option if you want to assess the user journey by emotion.</p>
 			  				</div>
 
@@ -89,8 +89,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			  				</div>
 
 			  				<div class="Grid-cell pdf-box">
-			  					<a href="02_ComplexityAnalysis_Template-Guide.pdf" name="ComplexityImage" onclick="dataLayer.push({'event': 'complexity-click'});"><img class="select-type" src="complexity-map-image.png"></a>
-			  					<p>Map a User Journey by<br/> <a href="02_ComplexityAnalysis_Template-Guide.pdf" name="ComplexityLink" onclick="dataLayer.push({'event': 'complexity-click'});">Complexity</a></p>
+			  					<a href="02_ComplexityAnalysis_Template-Guide.pdf"><img class="select-type" src="complexity-map-image.png"></a>
+			  					<p>Map a User Journey by<br/> <a href="02_ComplexityAnalysis_Template-Guide.pdf">Complexity</a></p>
 			  					<p class="guide">Select this option if you want to assess the user journey by complexity.</p>
 			  				</div>
 			  				
