--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 										<!-- <a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a> -->
 										<header>
 										
-											<a href="#02_ComplexityAnalysis_Template-Guide.pdf" class="button scrolly">Complexity Analysis</a>
+											<a href="02_ComplexityAnalysis_Template-Guide.pdf" class="button scrolly">Complexity Analysis</a>
 											<p>Use this map template to identify onerous interactions in your product. </p>
 										</header>
 									</article>
