--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<link rel="icon" href="favicon.ico">
+		<!-- <link rel="icon" href="favicon.ico"> -->
 		<link rel="shortcut icon" type="image/png" href="/favicon.png">
 
 		<script>
